# copliant

./: .dockerignore  .env.example  .env.production.example  .gitignore  :memory:  API.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  QA-REPORT.md  README.md  TODOS.md  add_system_names_table.py  alembic.ini  create_test_users.py  deploy.sh  docker-compose.yml  migrate.sh  pyproject.toml  requirements.txt  seed_users.py  start.sh
.context/retros/: 2026-03-20-1.json
app/: __init__.py  config.py  database.py  exceptions.py  main.py
app/core/: __init__.py  permissions.py
app/models/: __init__.py  approval_history.py  compliance_record.py  component.py  legal_declaration.py  notification.py  system_name.py  urgency.py  user.py
app/routes/: __init__.py  approvals.py  auth.py  components.py  dashboard.py  legal_declarations.py  notifications.py  records.py  system_names.py
app/schemas/: __init__.py  approval.py  auth.py  compliance_record.py  component.py  dashboard.py  legal_declaration.py  notification.py  system_name.py  user.py
app/services/: __init__.py  black_duck.py  (+7 more)
migrations/: env.py
scripts/: merge_notifications.py
static/: index.html
test_data/: 111.spdx.json
tests/: conftest.py  test_api.py  test_approval_flow.py  test_approval_flow_extended.py  test_approvals.py  test_auth.py  test_black_duck.py  test_component_match.py  test_components.py  test_dashboard.py  test_declaration_history.py  test_exceptions.py  test_legal_declarations.py  test_models.py  test_permissions.py  test_records.py  test_schemas.py  test_spdx_parser.py  test_urgency.py
(+10 files in other folders)
